--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,7 +2,7 @@ includes:
 	- phpstan-baseline.neon
 
 parameters:
-	level: 0
+	level: 1
 	paths:
 		- .
 	excludePaths:
@@ -11,4 +11,5 @@ parameters:
 		- coverage
 	scanDirectories:
 		- ../SemanticMediaWiki/includes
+		- ../SemanticMediaWiki/src
 		- ../../includes
