upload coverage report to Codecov

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,9 @@ jobs:
       - name: Run tests with coverage
         run: make ci-coverage
         if: matrix.coverage == true
+
+      - name: Upload code coverage
+        uses: codecov/codecov-action@v3
+        with:
+          files: coverage/php/coverage.xml
+        if: matrix.coverage == true
