Add CI for MW 1.39+
* Bumps minimum MW version to MW 1.39+

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
+!.*
+*~
+*.kate-swp
+.*.swp
+
 .idea/
-vendor
+
+.envrc
 .phpunit.result.cache
+
+composer.lock
+composer.phar
+
+npm-debug.log
+
+vendor/
+extensions/
+node_modules/
+conf/
+.DS_Store
 .env
 coverage
