--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,16 @@
 {
+	"config": {
+		"process-timeout": 0,
+		"allow-plugins": {
+			"composer/installers": true,
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
+	},
 	"require-dev": {
-		"mediawiki/mediawiki-codesniffer": "39.0.0",
-		"mediawiki/minus-x": "1.1.1",
+		"mediawiki/mediawiki-codesniffer": "46.0.0",
+		"mediawiki/minus-x": "1.1.3",
 		"php-parallel-lint/php-console-highlighter": "1.0.0",
-		"php-parallel-lint/php-parallel-lint": "1.3.2",
+		"php-parallel-lint/php-parallel-lint": "1.4.0",
 		"phpstan/phpstan": "^1.7",
 		"vimeo/psalm": "^4.23"
 	},
@@ -22,14 +29,18 @@
 			"@phpstan"
 		],
 		"lint": "parallel-lint . --exclude vendor --exclude node_modules",
-		"phpcs": "phpcs -p -s .",
-		"phpcs-fix": "phpcbf .",
+		"phpcs": "phpcs -ps -d memory_limit=2G",
+		"phpcs-fix": "phpcbf -p",
 		"phpstan": "phpstan analyse --configuration=phpstan.neon --memory-limit=2G",
 		"phpstan-baseline": "phpstan analyse --configuration=phpstan.neon --memory-limit=2G --generate-baseline",
 		"psalm": "psalm --config=psalm.xml",
 		"psalm-baseline": "psalm --config=psalm.xml --set-baseline=psalm-baseline.xml",
 		"phpunit": "php ../../tests/phpunit/phpunit.php -c phpunit.xml.dist --testdox",
 		"phpunit-coverage": "php ../../tests/phpunit/phpunit.php -c phpunit.xml.dist --testdox --coverage-text --coverage-html coverage/php --coverage-clover coverage/php/coverage.xml",
+		"post-test-coverage": [
+			"sed -i 's|/var/www/html/extensions/SemanticDependencyUpdater/||g' coverage/php/coverage.xml",
+			"find coverage/php -type f -name '*.html' -exec sed -i 's|/var/www/html/extensions/||g' {} +"
+		],
 		"minus-x": "minus-x check .",
 		"minus-x-fix": "minus-x fix ."
 	}
