--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,6 +5,8 @@ parameters:
 	level: 1
 	paths:
 		- .
+	ignoreErrors:
+		- identifier: class.notFound
 	excludePaths:
 		- vendor (?)
 		- node_modules (?)
