Add CI for MW 1.39+ (#18)
* Add CI for MW 1.39+

* Bumps minimum MW version to MW 1.39+

* Update Hooks.php

* Update .gitignore

* Fix

* Update phpstan.neon

* Update Hooks.php

* Fix

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,11 +5,13 @@ parameters:
 	level: 1
 	paths:
 		- .
+	reportUnmatchedIgnoredErrors: false
 	excludePaths:
-		- vendor
-		- node_modules
-		- coverage
+		- vendor (?)
+		- node_modules (?)
+		- coverage (?)
 	scanDirectories:
 		- ../SemanticMediaWiki/includes
 		- ../SemanticMediaWiki/src
+		- ../SemanticMediaWiki/Tesa
 		- ../../includes
