--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,61 +2,72 @@ name: CI
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
   pull_request:
-    branches: [master]
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-20.04
+
+  test:
+
+    runs-on: ubuntu-22.04
     continue-on-error: ${{ matrix.experimental }}
 
     strategy:
       matrix:
         include:
-          - mediawiki_version: 1.35
-            smw_version: "4.1.1"
-            php_version: 7.4
-            database_type: mysql
-            database_image: "mysql:5.7"
-            coverage: true
-            experimental: false
-          - mediawiki_version: 1.35
-            smw_version: "4.1.1"
-            php_version: 7.4
-            database_type: sqlite
-            coverage: false
-            experimental: false
-          - mediawiki_version: 1.39
-            smw_version: "4.1.1"
+          - mediawiki_version: '1.39'
+            smw_version: dev-master
             php_version: 8.1
             database_type: mysql
-            database_image: "mysql:8"
+            database_image: "mariadb:10"
             coverage: false
             experimental: false
-          - mediawiki_version: 1.39
-            smw_version: "4.1.1"
-            php_version: 8.1
-            database_type: mysql
-            database_image: "mariadb:latest"
-            coverage: false
-            experimental: true
-          - mediawiki_version: 1.39
-            smw_version: "4.1.1"
+          - mediawiki_version: '1.39'
+            smw_version: dev-master
             php_version: 8.1
             database_type: postgres
             database_image: "postgres:14"
             coverage: false
-            experimental: true
+            experimental: false
+          - mediawiki_version: '1.40'
+            smw_version: dev-master
+            php_version: 8.1
+            database_type: mysql
+            database_image: "mariadb:11.2"
+            coverage: true
+            experimental: false
+          - mediawiki_version: '1.41'
+            smw_version: dev-master
+            php_version: 8.1
+            database_type: mysql
+            database_image: "mariadb:11.2"
+            coverage: false
+            experimental: false
+          - mediawiki_version: '1.42'
+            smw_version: dev-master
+            php_version: 8.1
+            database_type: mysql
+            database_image: "mariadb:11.2"
+            coverage: false
+            experimental: false
+          - mediawiki_version: '1.43'
+            smw_version: dev-master
+            php_version: 8.1
+            database_type: mysql
+            database_image: "mariadb:11.2"
+            coverage: false
+            experimental: false
 
     env:
-      SMW_VERSION: ${{ matrix.smw_version }}
       MW_VERSION: ${{ matrix.mediawiki_version }}
+      SMW_VERSION: ${{ matrix.smw_version }}
       PHP_VERSION: ${{ matrix.php_version }}
       DB_TYPE: ${{ matrix.database_type }}
       DB_IMAGE: ${{ matrix.database_image }}
 
+      
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -75,9 +86,8 @@ jobs:
         if: matrix.coverage == true
 
       - name: Upload code coverage
-        uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        uses: codecov/codecov-action@v4
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: coverage/php/coverage.xml
         if: matrix.coverage == true
