--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 		}
 	},
 	"require-dev": {
+		"phpunit/phpunit": "^9.5",
 		"mediawiki/mediawiki-codesniffer": "46.0.0",
 		"mediawiki/minus-x": "1.1.3",
 		"php-parallel-lint/php-console-highlighter": "1.0.0",
