--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,7 +14,7 @@
          verbose="true">
     <testsuites>
         <testsuite name="semantic-dependency-updater">
-            <directory>tests/phpunit</directory>
+            <directory>tests/phpunit/Unit</directory>
         </testsuite>
     </testsuites>
     <filter>
