tests: refactor HooksTest to increase code coverage
- add autoload to composer.json

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
 		"phpstan/phpstan": "^2.0",
 		"vimeo/psalm": "^4.23"
 	},
+	"autoload": {
+		"psr-4": {
+			"SDU\\": "src/"
+		}
+	},
 	"scripts": {
 		"test": [
 			"@analyze",
